--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,12 @@
 RewriteEngine On
 
+# Redirect from HTTP to HTTPS
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# Keep the existing rules for index.php routing
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-
 RewriteRule ^$ index.php [L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
